--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ excerpt_separator: "\n\n"
 
 detach: false
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "//netapp.github.io/" # the base hostname & protocol for your site
+url: "//gabrysiak.github.io/" # the base hostname & protocol for your site
 twitter_username: openstacknetapp
 github_username:  netapp
 
