changed structure again

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Openstack
+title: NetApp
 email: info@netapp.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -21,7 +21,7 @@ data_dir: ./_data
 collections:
   posts:
     output: true
-    permalink: /:year/:month/:date/:title/
+    permalink: /:title/
 
 safe: false
 include: [".htaccess", "_pages"]
@@ -46,10 +46,9 @@ excerpt_separator: "\n\n"
 
 detach: false
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "//gabrysiak.github.io/" # the base hostname & protocol for your site
+url: "//netapp.github.io/" # the base hostname & protocol for your site
 twitter_username: openstacknetapp
 github_username:  netapp
-youtube_username: NetAppTV
 
 permalink: date
 paginate_path: /page:num
